--- a/index.html
+++ b/index.html
@@ -5,34 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="js.js"></script>
+   
 </head>
 <body>
     <section>
-    <nav>
-        <p class="nav-items"id="nav-first">
-            To Make Volunteering Easy
-        </p>
-        <p class="nav-items">
-            Home
-        </p>
-        <p class="nav-items">
-            About Us
-        </p>
-        <p class="nav-items">
-            Find Opportunities
-        </p>
-        <p class="nav-items">
-            Add Organization
-        </p>
-        <p class="nav-items">
-            Log in
-        </p>
-    </nav>
+        <nav>
+            <a href="#nav0" class="nav-items" id="nav-first">To Make Volunteering Easy</a>
+            <a href="#nav1" class="nav-items">Home</a>
+            <a href="#nav2" class="nav-items">About Us</a>
+            <a href="#nav4" class="nav-items">Find Opportunities</a>
+            <a href="#nav5" class="nav-items">Register</a>
+        </nav>    
     <img src="v6.jpg" class="img1">
 </section>
 
-<section>
+<section> <a id="nav2"></a>
     <div class="container">
     <div class="items" id="item1">
     <p class="about">
@@ -57,7 +44,7 @@
     </p>
     </div>
     <div class="items" id="item3">
-        <img src="v4.jpg" width="100%" height="400">
+        <img src="v4.jpg" width="100%" class="img5">
     </div> 
 </div>
 <br>
@@ -65,17 +52,16 @@
 <hr>
 <section>
     <div class="moment">
-        Moment's of Joy
+        Moments of Joy
     </div>
     <div class="img4">
-
         <img src="v3.jpg" class="imgg">
         <img src="v4.jpg" class="imgg">
         <img src="volunteer.jpg" class="imgg">
         <img src="volunteer2.jpg" class="imgg">
-
     </div>
 </section>
 <footer>helllooooo dont copy thisss</footer>
+<script src="js.js"></script>
 </body>
 </html>
