--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
 <body>
     <section>
         <nav>
-            <a href="#nav0" class="nav-items" id="nav-first">To Make Volunteering Easy</a>
+            <a href="#nav0" class="nav-items" id="nav-first">Making Volunteering Easy</a>
             <a href="#nav1" class="nav-items">Home</a>
             <a href="#nav2" class="nav-items">About Us</a>
-            <a href="#nav4" class="nav-items">Find Opportunities</a>
-            <a href="#nav5" class="nav-items">Register</a>
+            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/events.html" class="nav-items">Register for an Event</a>
         </nav>    
     <img src="v6.jpg" class="img1">
 </section>
 
 <section> <a id="nav2"></a>
     <div class="container">
-    <div class="items" id="item1">
-    <p class="about">
-        About Us
-    </p>
+        <div class="items" id="item1">
+             <p class="about">
+                About Us
+            </p>
+        </div>
+        <div class="items" id="item2">
+            <p>
+                At CREATIVE COMPUTERS we're driven by a simple yet powerful belief: that together, 
+                we can create meaningful change in our communities. 
+            </p>
+            <br>
+            <p>
+                Founded by passionate volunteers, 
+                our platform connects individuals with local opportunities to make a difference.
+                Join us in our mission to inspire and mobilize a culture of service."
+            </p>
+        <br>
+        <br>
+            <p>
+                Uniting Hearts, Inspiring Change.
+            </p>
+        </div>
+        <div class="items" id="item3">
+            <img src="v4.jpg" width="100%" class="img5">
+        </div> 
     </div>
-    <div class="items" id="item2">
-    <p>
-        At CREATIVE COMPUTERS we're driven by a simple yet powerful belief: that together, 
-        we can create meaningful change in our communities. 
-    </p>
-    <br>
-    <p>
-        Founded by passionate volunteers, 
-        our platform connects individuals with local opportunities to make a difference.
-        Join us in our mission to inspire and mobilize a culture of service."
-    </p>
-<br>
-<br>
-    <p>
-        Uniting Hearts, Inspiring Change.
-    </p>
-    </div>
-    <div class="items" id="item3">
-        <img src="v4.jpg" width="100%" class="img5">
-    </div> 
-</div>
 <br>
 </section>
 <hr>
+
 <section>
     <div class="moment">
         Moments of Joy
