--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Volunteers's Zone</title>
     <link rel="stylesheet" href="style.css">
    
 </head>
 <body>
     <section>
         <nav>
-            <a href="#nav0" class="nav-items" id="nav-first">Making Volunteering Easy</a>
+            <a href="#nav0" class="nav-items" id="nav-first">Volunteer's Zone</a>
             <a href="#nav1" class="nav-items">Home</a>
             <a href="#nav2" class="nav-items">About Us</a>
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/events.html" class="nav-items">Register for an Event</a>
+            <a href="https://snehagonjari.github.io/MIS/events.html" class="nav-items">Register for an Event</a>
         </nav>    
     <img src="v6.jpg" class="img1">
 </section>
