--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span>Jijamata Udyan,Kamala Nehru Park,Lakaki Park
              </div>
-             <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
+             <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
             </div>
 
         <div class="event">
@@ -33,8 +33,7 @@
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Near Iskcon temple,Dagadusheth temple  
                        </div>
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-            </div>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
 
         <div class="event">
             <div class="ename">
@@ -45,8 +44,7 @@
             </div> 
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Near Iskcon temple,Dagadusheth temple           </div>  
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-            </div>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
 
         <div class="event">
             <div class="ename">
@@ -57,8 +55,7 @@
             </div> 
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Jijamata Udyan,Kamala Nehru Park           </div> 
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-            </div>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
     </div>
 
     <div class="containerevent">
@@ -73,7 +70,7 @@
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Hrudaynath Mangeshakar Hospital          
             </div>
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
             </div>
 
         <div class="event">
@@ -87,7 +84,7 @@
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Make new life Animal Hospital   
             </div>
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
             </div>
 
         <div class="event">
@@ -100,7 +97,7 @@
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Mula-Mutha River
             </div>   
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
         </div>
 
         <div class="event">
@@ -115,7 +112,7 @@
                 <span style="color:rgb(50, 50, 119);">Venue:</span> AISSMS IOIT near RTO pune
 
             </div>
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
+            <a href="https://snehagonjari.github.io/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>            </div>
         </div>
         
     </div>    
