--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#nav0" class="nav-items" id="nav-first">Volunteer's Zone</a>
             <a href="#nav1" class="nav-items">Home</a>
             <a href="#nav2" class="nav-items">About Us</a>
-            <a href="https://snehagonjari.github.io/MIS/events.html" class="nav-items">Register for an Event</a>
+            <a href="https://snehagonjari.github.io/Volunteers-s_zone/events.html"class="nav-items">Register for an Event</a>
         </nav>    
     <img src="v6.jpg" class="img1">
 </section>
