--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <img src="v4.jpg" width="100%" class="img5">
         </div>
         <div class="items" id="item2">
-            <p>
-                At CREATIVE COMPUTERS we're driven by a simple yet powerful belief: that together, 
+           <p>
+                At Volunteer's Zone we're driven by a simple yet powerful belief that together, 
                 we can create meaningful change in our communities. 
             </p>
             <br>
