--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Volunteers's Zone</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
    
 </head>
@@ -13,7 +13,7 @@
             <a href="#nav0" class="nav-items" id="nav-first">Volunteer's Zone</a>
             <a href="#nav1" class="nav-items">Home</a>
             <a href="#nav2" class="nav-items">About Us</a>
-            <a href="https://snehagonjari.github.io/Volunteers-s_zone/events.html"class="nav-items">Register for an Event</a>
+            <a href="http://127.0.0.1:3000/events.html" class="nav-items">Register for an Event</a>
         </nav>    
     <img src="v6.jpg" class="img1">
 </section>
@@ -25,11 +25,11 @@
                 About Us
             </p>
         </div>
-         <div class="items" id="item3">
+        <div class="items" id="item3">
             <img src="v4.jpg" width="100%" class="img5">
-        </div>
+        </div> 
         <div class="items" id="item2">
-           <p>
+            <p>
                 At Volunteer's Zone we're driven by a simple yet powerful belief that together, 
                 we can create meaningful change in our communities. 
             </p>
@@ -44,7 +44,8 @@
             <p>
                 Uniting Hearts, Inspiring Change.
             </p>
-        </div> 
+        </div>
+        
     </div>
 <br>
 </section>
@@ -55,13 +56,15 @@
         Moments of Joy
     </div>
     <div class="img4">
+        <img src="v7.jpg" class="imgg">
+        <img src="v8.jpg" class="imgg">
         <img src="v3.jpg" class="imgg">
-        <img src="v4.jpg" class="imgg">
-        <img src="volunteer.jpg" class="imgg">
-        <img src="volunteer2.jpg" class="imgg">
+        <img src="v9.jpg" class="imgg">
     </div>
 </section>
-<footer>helllooooo dont copy thisss</footer>
+<footer>
+    <p>Forging community bonds through local volunteering, our mission is to uplift lives, spread kindness,
+         and build a brighter, more inclusive society.Copyright@snehamanikgonjari</p></footer>
 <script src="js.js"></script>
 </body>
 </html>
