--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
             <div class="venueevent">
                 <span style="color:rgb(50, 50, 119);">Venue:</span> Near Iskcon temple,Dagadusheth temple  
                        </div>
-                <a href="https://snehagonjari.github.io/Volunteers-s_zone/newaccount.htmlnewaccount.html"><img src="plus3.png" id="imgplus"></a>
+                <a href="https://snehagonjari.github.io/Volunteers-s_zone/newaccount.html"><img src="plus3.png" id="imgplus"></a>
             </div>
 
         <div class="event">
