--- a/event6.html
+++ b/event6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create New Account</title>
+    <title>Event 6</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
 </div>
 </div>
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyDfERbMqVh4-ASuLUOKyOQ6SlcZca_bNTsZTpsPKTLqiT33j0b8Gng8iuOxNn_GDBN/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwzf_QVGZnN6MS_OnYH1bctz_d4o1Gka6gVzEoGsUYit_ZlpuJlvf4NCPvXS1nCLi8S/exec'
     const form = document.forms['submit-to-google-sheet']
   
     form.addEventListener('submit', e => {
