--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=., initial-scale=1.0">
-    <title>Volunteer's Zone</title>
+    <title>Events</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
