--- a/index.html
+++ b/index.html
@@ -1,122 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=., initial-scale=1.0">
-    <title>Events</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
-    <p id="register-now">Register Now</p>
-    <div class="containerevent">
-        <div class="event">
-            <div class="ename">
-                Community Clean-up Day            
-            </div>
-            <div class="descevent">
-                Organize a day where volunteers come together to clean up local parks, 
-                streets, or beaches. Provide trash bags, gloves, and other necessary equipment.
-            </div>
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span>Jijamata Udyan,Kamala Nehru Park,Lakaki Park
-             </div>
-             <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-            </div>
+    <section>
+        <nav>
+            <a href="#nav0" class="nav-items" id="nav-first">Volunteer's Zone</a>
+            <a href="#nav1" class="nav-items">Home</a>
+            <a href="#nav2" class="nav-items">About Us</a>
+            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/events.html" class="nav-items">Register for an Event</a>
+        </nav>    
+    <img src="v6.jpg" class="img1">
+</section>
 
-        <div class="event">
-            <div class="ename">
-                Food Drive            
-            </div>
-            <div class="descevent">
-                Partner with local food banks or shelters to organize a food drive. Collect non-perishable food items and distribute them to those in need.              
-            </div>
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> Near Iskcon temple,Dagadusheth temple  
-                       </div>
-                       <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-                    </div>
-
-        <div class="event">
-            <div class="ename">
-                Clothing Donation Event
-            </div>   
-            <div class="descevent">
-                Gather gently used clothing donations from the community and distribute them to homeless shelters or individuals in need.
-            </div> 
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> Near Iskcon temple,Dagadusheth temple           </div>  
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-            </div>
-
-        <div class="event">
-            <div class="ename">
-                Senior Citizen Outreach
-            </div>  
-            <div class="descevent">
-                Visit nursing homes, engage with elderly through activities and conversations, reducing isolation and enhancing their well-being.
-            </div> 
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> Jijamata Udyan,Kamala Nehru Park           </div> 
-                <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-            </div>
+<section> <a id="nav2"></a>
+    <div class="container">
+        <div class="items" id="item1">
+             <p class="about">
+                About Us
+            </p>
+        </div>
+        <div class="items" id="item3">
+            <img src="v4.jpg" width="100%" class="img5">
+        </div> 
+        <div class="items" id="item2">
+            <p>
+                At Volunteer's Zone we're driven by a simple yet powerful belief that together, 
+                we can create meaningful change in our communities. 
+            </p>
+            <br>
+            <p>
+                Founded by passionate volunteers, 
+                our platform connects individuals with local opportunities to make a difference.
+                Join us in our mission to inspire and mobilize a culture of service."
+            </p>
+        <br>
+        <br>
+            <p>
+                Uniting Hearts, Inspiring Change.
+            </p>
+        </div>
+        
     </div>
+<br>
+</section>
+<hr>
 
-    <div class="containerevent">
-        <div class="event">
-            <div class="ename">
-                Healthcare Support 
-            </div>
-            <div class="descevent">
-                Volunteer at hospitals or clinics by providing administrative assistance,
-                 comforting patients,assisting medical staff with non-medical tasks.            
-                </div> 
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> Hrudaynath Mangeshakar Hospital          
-            </div>
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-        </div>
-
-        <div class="event">
-            <div class="ename">
-                Animal Shelter Support 
-            </div>
-            <div class="descevent">
-                Volunteer at shelters, care for animals through feeding, grooming, and 
-                socializing, improving their chances of adoption through positive interactions.
-            </div>
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> Make new life Animal Hospital   
-            </div>
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-        </div>
-
-        <div class="event">
-            <div class="ename">
-                River Cleaning Day
-            </div> 
-            <div class="descevent">
-                Volunteer for river cleaning to remove trash, monitor water quality, restore ecosystems, and advocate 
-                for policies. Join local initiatives, educate communities, and collaborate for a cleaner, healthier river environment</div> 
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> Mula-Mutha River
-            </div>   
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-        </div>
-
-        <div class="event">
-            <div class="ename">
-                Educational Workshop 
-            </div>
-            <div class="descevent">
-        Host workshops on financial literacy, job readiness and health.
-        Invite local experts to share knowledge, empowering the community with valuable insights.
-            </div>
-            <div class="venueevent">
-                <span style="color:rgb(50, 50, 119);">Venue:</span> AISSMS IOIT near RTO pune
-
-            </div>
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/newaccount.html"><img src="plus3.png" id="imgplus"></a>
-        </div>
-        </div>   
-         
-    </body>
+<section>
+    <p class="moment">
+        Moments of Joy
+    </p>
+    <div class="img4">
+        <img src="v7.jpg" class="imgg">
+        <img src="v8.jpg" class="imgg">
+        <img src="v3.jpg" class="imgg">
+        <img src="v9.jpg" class="imgg">
+    </div>
+</section>
+<footer>
+    <p>Forging community bonds through local volunteering, our mission is to uplift lives, spread kindness,
+         and build a brighter, more inclusive society.**If you are willing to add your event on this page then kindly contact us through @snehamanikgonjari@gmail.com**
+        Copyright@snehamanikgonjari</p></footer>
+<script src="js.js"></script>
+</body>
 </html>
