--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#nav0" class="nav-items" id="nav-first">Volunteer's Zone</a>
             <a href="#nav1" class="nav-items">Home</a>
             <a href="#nav2" class="nav-items">About Us</a>
-            <a href="http://127.0.0.1:3000/c:/Users/LENOVO/Desktop/MIS/events.html" class="nav-items">Register for an Event</a>
+            <a href="https://github.com/snehagonjari/Volunteers-s_zone/edit/main/events.html" class="nav-items">Register for an Event</a>
         </nav>    
     <img src="v6.jpg" class="img1">
 </section>
