--- a/event8.html
+++ b/event8.html
@@ -25,7 +25,7 @@
 </div>
 </div>
 <script>
-    const scriptURL = https://script.google.com/macros/s/AKfycbwZLh2uHoTlNWDWUAfDbVVEOyzJfBbouI3eP_HUlmYPXjnGVlfq1KICw-hEktxO8XSi/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxCE5sddtrvlM8yeJu5fxYW-JyTUCXSgX9JLEnxNjc2nKojG-eDKKMlXodZs0BOHJ26/exec'
     const form = document.forms['submit-to-google-sheet']
   
     form.addEventListener('submit', e => {
