--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <a href="https://snehagonjari.github.io/Volunteers-s_zone/events.html" class="nav-items">Register for an Event</a>
         </nav>    
     <img src="v6.jpg" class="img1">
+        <pre class="tagline">CREATED BY 
+        Sneha Gonjari
+        Satwik Garje
+        Ishwari Abuj
+        Gauri Dighe
+        </pre>
 </section>
 
 <section> <a id="nav2"></a>
